--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>Document</title>
     <link href="style.css" rel="stylesheet"> 
 </head>
-<body>
+<body class="body">
+
+    <h1></h1>
+
     
 
 
